--- a/price.html
+++ b/price.html
@@ -8,7 +8,7 @@
 </head>
 <body class="page inner price">
   <header class="header">
-    <nav class="main-nav">
+    <nav class="main-nav container">
       <a class="logo" href="index.html" aria-label="Переход на главную страницу">
         <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
       </a>
@@ -48,73 +48,77 @@
       </li>
     </ul>
 
-    <b class="promo-text">Истинно мужская классика</b>>
+    <b class="promo-text">Истинно мужская классика</b>
 
-    <section class="our-partners">
-      <h2 class="headline">Мы используем только лучшие средства:</h2>
-      <ul class="our-partners-list">
-        <li>Baxter of california</li>
-        <li>Mr natty</li>
-        <li>Suavecito</li>
-        <li>Malin+Goetz</li>
-      </ul>
-    </section>
+    <div class="content-column">
+      <section class="our-partners column">
+        <h2 class="headline">Мы используем только лучшие средства:</h2>
+        <ul class="our-partners-list">
+          <li>Baxter of california</li>
+          <li>Mr natty</li>
+          <li>Suavecito</li>
+          <li>Malin+Goetz</li>
+        </ul>
+      </section>
 
-    <section class="price-list">
-      <h2 class="headline">Цены на услуги наших мастеров:</h2>
-      <table class="price-table">
-        <tr>
-          <td>Стрижка</td>
-          <td>1500 &#8381;</td>
-        </tr>
-        <tr>
-          <td>Стрижка бороды</td>
-          <td>500 &#8381;</td>
-        </tr>
-        <tr>
-          <td>Накрутка усов</td>
-          <td>350 &#8381;</td>
-        </tr>
-      </table>
-    </section>
+      <section class="price-list">
+        <h2 class="headline">Цены на услуги наших мастеров:</h2>
+        <table class="price-table column">
+          <tr>
+            <td>Стрижка</td>
+            <td>1500 &#8381;</td>
+          </tr>
+          <tr>
+            <td>Стрижка бороды</td>
+            <td>500 &#8381;</td>
+          </tr>
+          <tr>
+            <td>Накрутка усов</td>
+            <td>350 &#8381;</td>
+          </tr>
+        </table>
+      </section>
 
-    <section class="about-us">
+    <section class="about-us column">
       <h2 class="headline">Несколько слов о нас:</h2>
       <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.
       </p>
     </section>
 
-    <section class="promo-desc">
+    <section class="promo-desc column">
       <h2 class="visually-hid">Краткое дополнение о нас</h2>
       <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
     </section>
+    </div>
   </main>
 
   <footer class="footer">
-    <p class="footer-contacts">
-      Барбершоп «Бородинский»<br>
-      Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-      <a class="map-link" href="map.html">Как нас найти?</a><br>
-      Телефон: +7 (812) 666-02-66
-    </p>
-    <div class="footer-social">
-      <b>Давайте дружить!</b>
-      <ul>
-        <li>
-          <a class="social-btn" aria-label="Вконтакте" href="vk.com">Вконтакте</a>
-        </li>
-        <li>
-          <a class="social-btn" aria-label="Фейсбук" href="facebook.com">Фейсбук</a>
-        </li>
-        <li>
-          <a class="social-btn" aria-label="Инстаграм" href="instagram.com">Инстаграм</a>
-        </li>
-      </ul>
+    <div class="container">
+      <p class="footer-contacts">
+        Барбершоп «Бородинский»<br>
+        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+        <a class="map-link" href="map.html">Как нас найти?</a><br>
+        Телефон: +7 (812) 666-02-66
+      </p>
+      <div class="footer-social">
+        <b>Давайте дружить!</b>
+        <ul>
+          <li>
+            <a class="social-btn" aria-label="Вконтакте" href="vk.com">Вконтакте</a>
+          </li>
+          <li>
+            <a class="social-btn" aria-label="Фейсбук" href="facebook.com">Фейсбук</a>
+          </li>
+          <li>
+            <a class="social-btn" aria-label="Инстаграм" href="instagram.com">Инстаграм</a>
+          </li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <b>Разработано:</b>
+        <a class="btn copyright-btn" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      </p>
     </div>
-    <p class="footer-copyright">
-      <b>Разработано:</b>
-      <a class="btn copyright-btn" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-    </p>
   </footer>
 
   <section class="modal modal-login">
