--- a/index.html
+++ b/index.html
@@ -12,28 +12,32 @@
       <a class="logo">
         <img src="img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
       </a>
-      <ul class="site-nav">
-        <li>
-          <a class="link" href="info.html">Информация</a>
-        </li>
-        <li>
-          <a class="link" href="news.html">Новости</a>
-        </li>
-        <li>
-          <a class="link" href="price.html">Прайс-лист</a>
-        </li>
-        <li>
-          <a class="link" href="catalog.html">Магазин</a>
-        </li>
-        <li>
-          <a class="link" href="contacts.html">Контакты</a>
-        </li>
-      </ul>
-      <ul class="user-nav">
-        <li class="login-link">
-          <a class="user-login-link" href="login.html">Вход</a>
-        </li>
-      </ul>
+      <div class="main-nav-wrapper">
+        <div class="container">
+          <ul class="site-nav">
+            <li>
+              <a class="link" href="info.html">Информация</a>
+            </li>
+            <li>
+              <a class="link" href="news.html">Новости</a>
+            </li>
+            <li>
+              <a class="link" href="price.html">Прайс-лист</a>
+            </li>
+            <li>
+              <a class="link" href="catalog.html">Магазин</a>
+            </li>
+            <li>
+              <a class="link" href="contacts.html">Контакты</a>
+            </li>
+          </ul>
+          <ul class="user-nav">
+            <li class="login-link">
+              <a class="user-login-link" href="login.html">Вход</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
 
@@ -129,30 +133,32 @@
   </main>
 
   <footer class="footer">
-    <p class="footer-contacts">
-      Барбершоп «Бородинский»<br>
-      Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-      <a class="map-link" href="map.html">Как нас найти?</a><br>
-      Телефон: +7 (812) 666-02-66
-    </p>
-    <div class="footer-social">
-      <b>Давайте дружить!</b>
-      <ul>
-        <li>
-          <a class="social-btn" aria-label="Вконтакте" href="vk.com">Вконтакте</a>
-        </li>
-        <li>
-          <a class="social-btn" aria-label="Фейсбук" href="facebook.com">Фейсбук</a>
-        </li>
-        <li>
-          <a class="social-btn" aria-label="Инстаграм" href="instagram.com">Инстаграм</a>
-        </li>
-      </ul>
+    <div class="container">
+      <p class="footer-contacts">
+        Барбершоп «Бородинский»<br>
+        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+        <a class="map-link" href="map.html">Как нас найти?</a><br>
+        Телефон: +7 (812) 666-02-66
+      </p>
+      <div class="footer-social">
+        <b>Давайте дружить!</b>
+        <ul>
+          <li>
+            <a class="social-btn" aria-label="Вконтакте" href="vk.com">Вконтакте</a>
+          </li>
+          <li>
+            <a class="social-btn" aria-label="Фейсбук" href="facebook.com">Фейсбук</a>
+          </li>
+          <li>
+            <a class="social-btn" aria-label="Инстаграм" href="instagram.com">Инстаграм</a>
+          </li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <b>Разработано:</b>
+        <a class="btn copyright-btn" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      </p>
     </div>
-    <p class="footer-copyright">
-      <b>Разработано:</b>
-      <a class="btn copyright-btn" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-    </p>
   </footer>
 
   <section class="modal modal-login">
